deploy/helm/industry-profiles/smartcities/vss-ingress-example-rewrites.yaml
# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/path-rewrite: |
      /video-analytics-api/(.*) /\1
      /alert-bridge/(.*) /\1
  name: <RELEASE_NAME>-rewrites    # e.g. vss-smc-rewrites
  namespace: <NAMESPACE>    # e.g. vss-smc
spec:
  ingressClassName: haproxy
  rules:
  - host: vss.<EXTERNAL_HOST>.nip.io    # e.g. vss.10.57.209.221.nip.io Value of global.externalHost in values-verification.yaml
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-vss-video-analytics-api    # e.g. vss-smc-vss-video-analytics-api
            port:
              number: 8081
        path: /video-analytics-api
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-alert-bridge    # e.g. vss-smc-vss-alert-bridge
            port:
              number: 9080
        path: /alert-bridge
        pathType: Prefix
