deploy/helm/industry-profiles/smartcities/vss-ingress-example.yaml
# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: <RELEASE_NAME>    # e.g. vss-smc
  namespace: <NAMESPACE>    # e.g. vss-smc
spec:
  ingressClassName: haproxy
  rules:
  - host: vss.<EXTERNAL_HOST>.nip.io    # e.g. vss.10.57.209.221.nip.io Value of global.externalHost in values-verification.yaml
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent-ui    # e.g. vss-smc-vss-agent-ui
            port:
              number: 3000
        path: /api/chat
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent    # e.g. vss-smc-vss-agent
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent    # e.g. vss-smc-vss-agent
            port:
              number: 8000
        path: /chat
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent    # e.g. vss-smc-vss-agent
            port:
              number: 8000
        path: /websocket
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent    # e.g. vss-smc-vss-agent
            port:
              number: 8000
        path: /static
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-vios-ingress    # e.g. vss-smc-vss-vios-ingress
            port:
              number: 30888
        path: /vst
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-calibration-toolkit    # e.g. vss-smc-calibration-toolkit
            port:
              number: 8003
        path: /calibration
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-video-analytics-ui    # e.g. vss-smc-video-analytics-ui
            port:
              number: 3002
        path: /analytics-ui
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-agent-ui    # e.g. vss-smc-vss-agent-ui
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-behavior-analytics    # e.g. vss-smc-vss-behavior-analytics
            port:
              number: 8080
        path: /behavior-analytics
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-rtvi-cv-sdr    # e.g. vss-smc-vss-rtvi-cv-sdr
            port:
              number: 4001
        path: /perception-sdr
        pathType: Prefix
      - backend:
          service:
            name: <RELEASE_NAME>-vss-va-mcp    # e.g. vss-smc-vss-va-mcp
            port:
              number: 9901
        path: /va-mcp
        pathType: Prefix
  - host: streamer.<EXTERNAL_HOST>.nip.io    # e.g. streamer.10.57.209.221.nip.io
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-vss-vios-nvstreamer    # e.g. vss-smc-vss-vios-nvstreamer
            port:
              number: 31000
        path: /
        pathType: Prefix
  - host: kibana.<EXTERNAL_HOST>.nip.io    # e.g. kibana.10.57.209.221.nip.io
    http:
      paths:
      - backend:
          service:
            name: <RELEASE_NAME>-kibana    # e.g. vss-smc-kibana
            port:
              number: 5601
        path: /
        pathType: Prefix
